[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/refactored/Part/Port.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/refactored/Completed/Process.gd" type="Script" id=2]
[ext_resource path="res://arts/Branco.png" type="Texture" id=3]
[ext_resource path="res://scenes/refactored/Part/SubPart/StorageDescriptionLong.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/refactored/Part/SubPart/StorageBarLong.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/refactored/Part/StorageBarProcess.gd" type="Script" id=6]

[node name="Process" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="StorageDescriptionLong" parent="Sprite2" index="0" instance=ExtResource( 4 )]
visible = false
anchor_left = 1.0
anchor_right = 3.0
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="Sprite" parent="." index="1"]
rotation = -1.5708

[node name="StorageBarLong" parent="Sprite" index="0" instance=ExtResource( 5 )]
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
script = ExtResource( 6 )

[connection signal="mouse_entered" from="." to="." method="_on_Process_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Process_mouse_exited"]
